basic attributes of tasks and NGINX status

--- a/collect-nginx-statuses.ipynb
+++ b/collect-nginx-statuses.ipynb
@@ -2,14 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Requirement already satisfied: pip in /Users/psaghelyi-remote/.pyenv/versions/3.11.3/lib/python3.11/site-packages (23.3.1)\n",
+      "Requirement already satisfied: pip in /Users/psaghelyi-remote/.pyenv/versions/3.11.3/lib/python3.11/site-packages (23.3.2)\n",
       "Note: you may need to restart the kernel to use updated packages.\n",
       "Requirement already satisfied: boto3 in /Users/psaghelyi-remote/.pyenv/versions/3.11.3/lib/python3.11/site-packages (1.33.1)\n",
       "Requirement already satisfied: prettytable in /Users/psaghelyi-remote/.pyenv/versions/3.11.3/lib/python3.11/site-packages (3.9.0)\n",
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -119,38 +119,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Found 3 tasks running in EcsCluster1-main/projects-application-fargate-main\n",
-      "Found 3 tasks running in EcsCluster1-main/projects-application-fargate-main\n",
-      "Found 32 tasks running in EcsCluster1-main/projects-application-fargate-main\n",
-      "Found 61 tasks running in EcsCluster1-main/projects-application-fargate-main\n",
-      "Found 4 tasks running in EcsCluster1-main/projects-application-fargate-main\n",
-      "Found 4 tasks running in EcsCluster1-main/projects-application-fargate-main\n",
-      "Found 4 tasks running in EcsCluster1-main/projects-application-fargate-main\n",
-      "Found 4 tasks running in EcsCluster1-main/projects-application-fargate-main\n",
-      "Task arn:aws:ecs:ap-southeast-1:707785685172:task/EcsCluster1-main/a7905734c2214ceba40a5e72ed20226e failed: EOF occurred in violation of protocol (_ssl.c:1002)\n",
-      "Found 6 tasks running in EcsCluster1-main/projects-application-fargate-main\n",
-      "Found 4 tasks running in EcsCluster1-main/projects-application-fargate-main\n",
-      "+----------------+----------------+-------+--------+---------+---------+----------+---------+---------+---------+-------------+\n",
-      "|    Profile     |     Region     | tasks | active | handled | accepts | requests | reading | writing | waiting | waiting_max |\n",
-      "+----------------+----------------+-------+--------+---------+---------+----------+---------+---------+---------+-------------+\n",
-      "|  acl-staging   |   us-west-2    |   3   |   10   |   3327  |   3327  |   7099   |    0    |    3    |    7    |      3      |\n",
-      "|  acl-staging   |   us-east-1    |   3   |   5    |  12549  |  12549  |  19545   |    0    |    3    |    2    |      1      |\n",
-      "| acl-production |   us-east-1    |   32  |   80   |  715371 |  715371 | 1070454  |    0    |    39   |    41   |      3      |\n",
-      "| acl-production |  eu-central-1  |   61  |  228   | 1691376 | 1691376 | 1999872  |    0    |    72   |   156   |      5      |\n",
-      "| acl-production |   af-south-1   |   4   |   13   |  243410 |  243410 |  330441  |    0    |    5    |    8    |      2      |\n",
-      "| acl-production |  ca-central-1  |   4   |   6    |  251017 |  251017 |  490774  |    0    |    4    |    2    |      1      |\n",
-      "| acl-production | ap-northeast-1 |   4   |   4    |  210074 |  210074 |  313101  |    0    |    4    |    0    |      0      |\n",
-      "| acl-production | ap-southeast-1 |   4   |   13   |  395447 |  395447 | 1008361  |    0    |    4    |    9    |      4      |\n",
-      "| acl-production | ap-southeast-2 |   6   |   10   |  398986 |  398986 |  495651  |    0    |    6    |    4    |      1      |\n",
-      "| acl-production |   sa-east-1    |   4   |   55   |  359637 |  359637 |  632518  |    0    |    4    |    51   |      14     |\n",
-      "+----------------+----------------+-------+--------+---------+---------+----------+---------+---------+---------+-------------+\n"
+      "Found 1 tasks running in acl-playground/us-west-2\n",
+      "Found 1 tasks running in acl-staging/us-west-2\n",
+      "Found 3 tasks running in acl-staging/us-east-1\n",
+      "Found 30 tasks running in acl-production/us-east-1\n",
+      "Found 64 tasks running in acl-production/eu-central-1\n",
+      "Found 4 tasks running in acl-production/af-south-1\n",
+      "Found 4 tasks running in acl-production/ca-central-1\n",
+      "Found 4 tasks running in acl-production/ap-northeast-1\n",
+      "Found 4 tasks running in acl-production/ap-southeast-1\n",
+      "Found 6 tasks running in acl-production/ap-southeast-2\n",
+      "Found 6 tasks running in acl-production/sa-east-1\n",
+      "+----------------+----------------+-------+--------+---------+---------+----------+---------+---------+---------+-----------+\n",
+      "|    Profile     |     Region     | tasks | active | handled | accepts | requests | reading | writing | waiting | queue_avg |\n",
+      "+----------------+----------------+-------+--------+---------+---------+----------+---------+---------+---------+-----------+\n",
+      "| acl-production |  eu-central-1  |   64  |  156   | 3631856 | 3631856 | 4172387  |    0    |    70   |    86   |    0.4    |\n",
+      "| acl-production |   us-east-1    |   30  |  134   | 1701501 | 1701501 | 2212455  |    0    |    36   |    98   |    2.5    |\n",
+      "| acl-production | ap-southeast-1 |   4   |   13   |  216433 |  216433 |  641300  |    0    |    5    |    8    |    1.2    |\n",
+      "|  acl-staging   |   us-east-1    |   3   |   6    |  96093  |  96093  |  442068  |    0    |    3    |    3    |     0     |\n",
+      "| acl-production |   sa-east-1    |   6   |   28   |  248235 |  248235 |  357621  |    0    |    6    |    22   |    2.7    |\n",
+      "| acl-production | ap-southeast-2 |   6   |   9    |  219930 |  219930 |  247425  |    0    |    6    |    3    |     0     |\n",
+      "| acl-production |  ca-central-1  |   4   |   15   |  115358 |  115358 |  157739  |    0    |    5    |    10   |    1.8    |\n",
+      "| acl-production |   af-south-1   |   4   |   9    |  122548 |  122548 |  156596  |    0    |    4    |    5    |    0.2    |\n",
+      "| acl-production | ap-northeast-1 |   4   |   4    |  107903 |  107903 |  123502  |    0    |    4    |    0    |     0     |\n",
+      "| acl-playground |   us-west-2    |   1   |   1    |  25126  |  25126  |  26111   |    0    |    1    |    0    |     0     |\n",
+      "|  acl-staging   |   us-west-2    |   1   |   2    |   816   |   816   |   1803   |    0    |    1    |    1    |     0     |\n",
+      "+----------------+----------------+-------+--------+---------+---------+----------+---------+---------+---------+-----------+\n"
      ]
     }
    ],
@@ -269,10 +270,12 @@
     "                # Sum up the values\n",
     "                for key, value in stats.items():\n",
     "                    aggregated_stats[key] += value\n",
-    "                    aggregated_stats[f'{key}_max'] = max(aggregated_stats[f'{key}_max'], value)\n",
     "            except Exception as e:\n",
     "                print(f\"Task {task_arn} failed: {e}\")\n",
     "\n",
+    "    unicorn_workers = 2\n",
+    "    handling = aggregated_stats[\"active\"] - aggregated_stats[\"instance_count\"] * unicorn_workers\n",
+    "    aggregated_stats[\"queue_avg\"] = round(float(handling) / aggregated_stats[\"instance_count\"],1) if handling > 0 else 0\n",
     "    return aggregated_stats\n",
     "\n",
     "\n",
@@ -281,6 +284,7 @@
     "service_name = 'projects-application-fargate-main'\n",
     "\n",
     "environments = [\n",
+    "    ('acl-playground', 'us-west-2'),  # playground\n",
     "    ('acl-staging', 'us-west-2'),  # staging\n",
     "    ('acl-staging', 'us-east-1'),  # preprod?\n",
     "    ('acl-production', 'us-east-1'),\n",
@@ -295,7 +299,7 @@
     "\n",
     "table = PrettyTable()\n",
     "table.field_names = [\"Profile\", \"Region\", \"tasks\", \"active\", \"handled\",\n",
-    "                     \"accepts\", \"requests\", \"reading\", \"writing\", \"waiting\", \"waiting_max\"]\n",
+    "                     \"accepts\", \"requests\", \"reading\", \"writing\", \"waiting\", \"queue_avg\"]\n",
     "\n",
     "for profile, region in environments:\n",
     "    aggregated_stats = get_nginx_status(profile, region, cluster_name, service_name)\n",
@@ -307,9 +311,12 @@
     "                   aggregated_stats['requests'],\n",
     "                   aggregated_stats['reading'],\n",
     "                   aggregated_stats['writing'],\n",
-    "                   aggregated_stats['waiting'], aggregated_stats['waiting_max']\n",
+    "                   aggregated_stats['waiting'], \n",
+    "                   aggregated_stats['queue_avg']\n",
     "                   ])\n",
     "\n",
+    "table.reversesort = True\n",
+    "table.sortby = \"requests\"\n",
     "print(table)"
    ]
   },
@@ -329,7 +336,9 @@
     "\n",
     "`Writing` - The current number of connections where nginx is writing the response back to the client.\n",
     "\n",
-    "`Waiting` - The current number of idle client connections waiting for a request."
+    "`Waiting` - The current number of idle client connections waiting for a request.\n",
+    "\n",
+    "`avg_queue` - The average number of requests waiting in the queue per task. This is calculated as (`active` - `workers`) / `tasks`."
    ]
   },
   {
@@ -341,7 +350,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -349,21 +358,21 @@
      "output_type": "stream",
      "text": [
       "Found 1 tasks running in acl-playground/us-west-2\n",
-      "Found 3 tasks running in acl-staging/us-west-2\n",
+      "Found 1 tasks running in acl-staging/us-west-2\n",
       "Found 3 tasks running in acl-staging/us-east-1\n",
-      "Found 32 tasks running in acl-production/us-east-1\n",
-      "Found 61 tasks running in acl-production/eu-central-1\n",
+      "Found 30 tasks running in acl-production/us-east-1\n",
+      "Found 64 tasks running in acl-production/eu-central-1\n",
       "Found 4 tasks running in acl-production/af-south-1\n",
       "Found 4 tasks running in acl-production/ca-central-1\n",
       "Found 4 tasks running in acl-production/ap-northeast-1\n",
       "Found 4 tasks running in acl-production/ap-southeast-1\n",
       "Found 6 tasks running in acl-production/ap-southeast-2\n",
-      "Found 4 tasks running in acl-production/sa-east-1\n",
+      "Found 6 tasks running in acl-production/sa-east-1\n",
       "+----------------+----------------+------+--------+-----------------+\n",
       "|    Profile     |     Region     | vCPU | Memory | Unicorn Workers |\n",
       "+----------------+----------------+------+--------+-----------------+\n",
       "| acl-playground |   us-west-2    | 0.5  |  3 GB  |        4        |\n",
-      "|  acl-staging   |   us-west-2    | 0.5  |  3 GB  |        2        |\n",
+      "|  acl-staging   |   us-west-2    | 0.5  |  3 GB  |        4        |\n",
       "|  acl-staging   |   us-east-1    | 1.0  |  5 GB  |        2        |\n",
       "| acl-production |   us-east-1    | 1.0  |  6 GB  |        2        |\n",
       "| acl-production |  eu-central-1  | 2.0  |  9 GB  |        2        |\n",
