--- a/projects-params.ipynb
+++ b/projects-params.ipynb
@@ -9,7 +9,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Requirement already satisfied: pip in /Users/psaghelyi-remote/.pyenv/versions/3.11.3/lib/python3.11/site-packages (23.3.1)\n",
+      "Requirement already satisfied: pip in /Users/psaghelyi-remote/.pyenv/versions/3.11.3/lib/python3.11/site-packages (23.3.2)\n",
       "Note: you may need to restart the kernel to use updated packages.\n",
       "Requirement already satisfied: boto3 in /Users/psaghelyi-remote/.pyenv/versions/3.11.3/lib/python3.11/site-packages (1.33.1)\n",
       "Requirement already satisfied: prettytable in /Users/psaghelyi-remote/.pyenv/versions/3.11.3/lib/python3.11/site-packages (3.9.0)\n",
@@ -155,9 +155,10 @@
     "                # Find and return the load balancing algorithm attribute\n",
     "                for attr in attributes['Attributes']:\n",
     "                    if attr['Key'] == 'load_balancing.algorithm.type':\n",
-    "                        return attr['Value']\n",
+    "                        lb_alg = 'LOR' if attr['Value'] == 'least_outstanding_requests' else attr['Value']\n",
+    "                        return lb_alg\n",
     "    \n",
-    "    return \"Not Found\""
+    "    return 'Not Found'"
    ]
   },
   {
@@ -169,32 +170,32 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "acl-playground us-west-2 - Min Tasks: 1, Max Tasks: 4, Actual Tasks: 1 (0.0%), Algorithm: least_outstanding_requests\n",
-      "acl-staging us-west-2 - Min Tasks: 1, Max Tasks: 4, Actual Tasks: 3 (66.67%), Algorithm: least_outstanding_requests\n",
-      "acl-staging us-east-1 - Min Tasks: 3, Max Tasks: 3, Actual Tasks: 3 (100%), Algorithm: least_outstanding_requests\n",
-      "acl-production us-east-1 - Min Tasks: 8, Max Tasks: 64, Actual Tasks: 32 (42.86%), Algorithm: least_outstanding_requests\n",
-      "acl-production eu-central-1 - Min Tasks: 8, Max Tasks: 64, Actual Tasks: 61 (94.64%), Algorithm: least_outstanding_requests\n",
-      "acl-production af-south-1 - Min Tasks: 4, Max Tasks: 4, Actual Tasks: 4 (100%), Algorithm: least_outstanding_requests\n",
-      "acl-production ca-central-1 - Min Tasks: 4, Max Tasks: 4, Actual Tasks: 4 (100%), Algorithm: least_outstanding_requests\n",
-      "acl-production ap-northeast-1 - Min Tasks: 4, Max Tasks: 4, Actual Tasks: 4 (100%), Algorithm: least_outstanding_requests\n",
-      "acl-production ap-southeast-1 - Min Tasks: 4, Max Tasks: 4, Actual Tasks: 4 (100%), Algorithm: least_outstanding_requests\n",
-      "acl-production ap-southeast-2 - Min Tasks: 6, Max Tasks: 6, Actual Tasks: 6 (100%), Algorithm: least_outstanding_requests\n",
-      "acl-production sa-east-1 - Min Tasks: 4, Max Tasks: 4, Actual Tasks: 4 (100%), Algorithm: least_outstanding_requests\n",
-      "+----------------+----------------+-----+-----+--------+-------+----------------------------+\n",
-      "|    Profile     |     Region     | Min | Max | Actual |   %   |         Algorithm          |\n",
-      "+----------------+----------------+-----+-----+--------+-------+----------------------------+\n",
-      "| acl-playground |   us-west-2    |  1  |  4  |   1    |  0.0  | least_outstanding_requests |\n",
-      "|  acl-staging   |   us-west-2    |  1  |  4  |   3    | 66.67 | least_outstanding_requests |\n",
-      "|  acl-staging   |   us-east-1    |  3  |  3  |   3    |  100  | least_outstanding_requests |\n",
-      "| acl-production |   us-east-1    |  8  |  64 |   32   | 42.86 | least_outstanding_requests |\n",
-      "| acl-production |  eu-central-1  |  8  |  64 |   61   | 94.64 | least_outstanding_requests |\n",
-      "| acl-production |   af-south-1   |  4  |  4  |   4    |  100  | least_outstanding_requests |\n",
-      "| acl-production |  ca-central-1  |  4  |  4  |   4    |  100  | least_outstanding_requests |\n",
-      "| acl-production | ap-northeast-1 |  4  |  4  |   4    |  100  | least_outstanding_requests |\n",
-      "| acl-production | ap-southeast-1 |  4  |  4  |   4    |  100  | least_outstanding_requests |\n",
-      "| acl-production | ap-southeast-2 |  6  |  6  |   6    |  100  | least_outstanding_requests |\n",
-      "| acl-production |   sa-east-1    |  4  |  4  |   4    |  100  | least_outstanding_requests |\n",
-      "+----------------+----------------+-----+-----+--------+-------+----------------------------+\n"
+      "acl-playground us-west-2 - Min Tasks: 1, Max Tasks: 4, Actual Tasks: 1 (25.0%), Algorithm: LOR\n",
+      "acl-staging us-west-2 - Min Tasks: 1, Max Tasks: 4, Actual Tasks: 1 (25.0%), Algorithm: LOR\n",
+      "acl-staging us-east-1 - Min Tasks: 3, Max Tasks: 3, Actual Tasks: 3 (N/A%), Algorithm: LOR\n",
+      "acl-production us-east-1 - Min Tasks: 6, Max Tasks: 48, Actual Tasks: 30 (62.5%), Algorithm: LOR\n",
+      "acl-production eu-central-1 - Min Tasks: 8, Max Tasks: 64, Actual Tasks: 64 (100.0%), Algorithm: LOR\n",
+      "acl-production af-south-1 - Min Tasks: 4, Max Tasks: 4, Actual Tasks: 4 (N/A%), Algorithm: LOR\n",
+      "acl-production ca-central-1 - Min Tasks: 4, Max Tasks: 32, Actual Tasks: 4 (12.5%), Algorithm: LOR\n",
+      "acl-production ap-northeast-1 - Min Tasks: 4, Max Tasks: 4, Actual Tasks: 4 (N/A%), Algorithm: LOR\n",
+      "acl-production ap-southeast-1 - Min Tasks: 4, Max Tasks: 4, Actual Tasks: 4 (N/A%), Algorithm: LOR\n",
+      "acl-production ap-southeast-2 - Min Tasks: 6, Max Tasks: 6, Actual Tasks: 6 (N/A%), Algorithm: LOR\n",
+      "acl-production sa-east-1 - Min Tasks: 6, Max Tasks: 48, Actual Tasks: 6 (12.5%), Algorithm: LOR\n",
+      "+----------------+----------------+-----+-----+--------+-------+-----------+\n",
+      "|    Profile     |     Region     | Min | Max | Actual |   %   | Algorithm |\n",
+      "+----------------+----------------+-----+-----+--------+-------+-----------+\n",
+      "| acl-playground |   us-west-2    |  1  |  4  |   1    |  25.0 |    LOR    |\n",
+      "|  acl-staging   |   us-west-2    |  1  |  4  |   1    |  25.0 |    LOR    |\n",
+      "|  acl-staging   |   us-east-1    |  3  |  3  |   3    |  N/A  |    LOR    |\n",
+      "| acl-production |   us-east-1    |  6  |  48 |   30   |  62.5 |    LOR    |\n",
+      "| acl-production |  eu-central-1  |  8  |  64 |   64   | 100.0 |    LOR    |\n",
+      "| acl-production |   af-south-1   |  4  |  4  |   4    |  N/A  |    LOR    |\n",
+      "| acl-production |  ca-central-1  |  4  |  32 |   4    |  12.5 |    LOR    |\n",
+      "| acl-production | ap-northeast-1 |  4  |  4  |   4    |  N/A  |    LOR    |\n",
+      "| acl-production | ap-southeast-1 |  4  |  4  |   4    |  N/A  |    LOR    |\n",
+      "| acl-production | ap-southeast-2 |  6  |  6  |   6    |  N/A  |    LOR    |\n",
+      "| acl-production |   sa-east-1    |  6  |  48 |   6    |  12.5 |    LOR    |\n",
+      "+----------------+----------------+-----+-----+--------+-------+-----------+\n"
      ]
     }
    ],
@@ -223,7 +224,7 @@
     "for profile, region in environments:\n",
     "    min_tasks, max_tasks, desired_tasks = getScalingDetails(profile, region, cluster_name, service_name)\n",
     "    algorithm = getLoadBalancingAlgorithm(profile, region, cluster_name, service_name)\n",
-    "    percentage = round((desired_tasks-min_tasks)/(max_tasks-min_tasks)*100.,2) if max_tasks > min_tasks else 100\n",
+    "    percentage = str(round(desired_tasks/max_tasks*100.,2)) if max_tasks > min_tasks else \"N/A\"\n",
     "    print(f\"{profile} {region} - Min Tasks: {min_tasks}, Max Tasks: {max_tasks}, Actual Tasks: {desired_tasks} ({percentage}%), Algorithm: {algorithm}\")\n",
     "    table.add_row([profile, region, min_tasks, max_tasks, desired_tasks, percentage, algorithm])\n",
     "\n",
