refactored folder structure

--- a/app-analyzers/collect-nginx-statuses.ipynb
+++ b/app-analyzers/collect-nginx-statuses.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,67 +47,11 @@
     "import time\n",
     "from prettytable import PrettyTable\n",
     "from collections import defaultdict\n",
-    "from concurrent.futures import ThreadPoolExecutor, as_completed"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## AWS utils"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def set_aws_credentials(profile, region_name='us-east-1'):\n",
-    "    result = subprocess.run(\n",
-    "        f\"aws-vault exec {profile} --json\", shell=True, capture_output=True)\n",
-    "    credentials = json.loads(result.stdout)\n",
+    "from concurrent.futures import ThreadPoolExecutor, as_completed\n",
     "\n",
-    "    # Create a session with the retrieved credentials\n",
-    "    session = boto3.session.Session(\n",
-    "        aws_access_key_id=credentials['AccessKeyId'],\n",
-    "        aws_secret_access_key=credentials['SecretAccessKey'],\n",
-    "        aws_session_token=credentials['SessionToken'],\n",
-    "        region_name=region_name\n",
-    "    )\n",
-    "\n",
-    "    return session\n",
-    "\n",
-    "\n",
-    "def get_tasks(ecs_client, cluster_name, service_name):\n",
-    "    # List all running tasks in a specified service\n",
-    "    response = ecs_client.list_tasks(\n",
-    "        cluster=cluster_name,\n",
-    "        serviceName=service_name,\n",
-    "        desiredStatus='RUNNING'\n",
-    "    )\n",
-    "    return response['taskArns']\n",
-    "\n",
-    "\n",
-    "def get_task_definition(ecs_client, cluster_name, task_arns):\n",
-    "    tasks = ecs_client.describe_tasks(cluster=cluster_name, tasks=task_arns)['tasks']\n",
-    "\n",
-    "    if len(tasks) == 0:\n",
-    "        raise Exception(\"No tasks found\")\n",
-    "    \n",
-    "    task_definition_arn = tasks[0]['taskDefinitionArn']\n",
-    "\n",
-    "    response = ecs_client.describe_task_definition(taskDefinition=task_definition_arn)\n",
-    "    task_definition = response['taskDefinition']\n",
-    "    return task_definition\n",
-    "\n",
-    "\n",
-    "def get_container_definition(task_definition, container_name):\n",
-    "    for container_definition in task_definition['containerDefinitions']:\n",
-    "        if container_definition['name'] == container_name:\n",
-    "            return container_definition\n",
-    "    return None\n",
-    "\n"
+    "import sys\n",
+    "sys.path.append('..')\n",
+    "from awsutils import *"
    ]
   },
   {
@@ -119,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -127,30 +71,31 @@
      "output_type": "stream",
      "text": [
       "Found 1 tasks running in acl-playground/us-west-2\n",
-      "Found 1 tasks running in acl-staging/us-west-2\n",
+      "Found 4 tasks running in acl-staging/us-west-2\n",
       "Found 3 tasks running in acl-staging/us-east-1\n",
-      "Found 30 tasks running in acl-production/us-east-1\n",
-      "Found 64 tasks running in acl-production/eu-central-1\n",
+      "Found 20 tasks running in acl-production/us-east-1\n",
+      "Found 29 tasks running in acl-production/eu-central-1\n",
       "Found 4 tasks running in acl-production/af-south-1\n",
+      "Task arn:aws:ecs:af-south-1:707785685172:task/EcsCluster1-main/3377bd6db96d4e3ba323ed4fb58edfce failed: Channel closed before command output was received\n",
       "Found 4 tasks running in acl-production/ca-central-1\n",
       "Found 4 tasks running in acl-production/ap-northeast-1\n",
-      "Found 4 tasks running in acl-production/ap-southeast-1\n",
+      "Found 6 tasks running in acl-production/ap-southeast-1\n",
       "Found 6 tasks running in acl-production/ap-southeast-2\n",
       "Found 6 tasks running in acl-production/sa-east-1\n",
       "+----------------+----------------+-------+--------+---------+---------+----------+---------+---------+---------+-----------+\n",
       "|    Profile     |     Region     | tasks | active | handled | accepts | requests | reading | writing | waiting | queue_avg |\n",
       "+----------------+----------------+-------+--------+---------+---------+----------+---------+---------+---------+-----------+\n",
-      "| acl-production |  eu-central-1  |   64  |  156   | 3631856 | 3631856 | 4172387  |    0    |    70   |    86   |    0.4    |\n",
-      "| acl-production |   us-east-1    |   30  |  134   | 1701501 | 1701501 | 2212455  |    0    |    36   |    98   |    2.5    |\n",
-      "| acl-production | ap-southeast-1 |   4   |   13   |  216433 |  216433 |  641300  |    0    |    5    |    8    |    1.2    |\n",
-      "|  acl-staging   |   us-east-1    |   3   |   6    |  96093  |  96093  |  442068  |    0    |    3    |    3    |     0     |\n",
-      "| acl-production |   sa-east-1    |   6   |   28   |  248235 |  248235 |  357621  |    0    |    6    |    22   |    2.7    |\n",
-      "| acl-production | ap-southeast-2 |   6   |   9    |  219930 |  219930 |  247425  |    0    |    6    |    3    |     0     |\n",
-      "| acl-production |  ca-central-1  |   4   |   15   |  115358 |  115358 |  157739  |    0    |    5    |    10   |    1.8    |\n",
-      "| acl-production |   af-south-1   |   4   |   9    |  122548 |  122548 |  156596  |    0    |    4    |    5    |    0.2    |\n",
-      "| acl-production | ap-northeast-1 |   4   |   4    |  107903 |  107903 |  123502  |    0    |    4    |    0    |     0     |\n",
-      "| acl-playground |   us-west-2    |   1   |   1    |  25126  |  25126  |  26111   |    0    |    1    |    0    |     0     |\n",
-      "|  acl-staging   |   us-west-2    |   1   |   2    |   816   |   816   |   1803   |    0    |    1    |    1    |     0     |\n",
+      "| acl-production |  eu-central-1  |   29  |   65   | 1380616 | 1380616 | 1701905  |    0    |    34   |    31   |    0.2    |\n",
+      "|  acl-staging   |   us-east-1    |   3   |   7    |  70972  |  70972  |  250078  |    0    |    3    |    4    |    0.3    |\n",
+      "| acl-production | ap-southeast-1 |   6   |   47   |  58753  |  58753  |  122235  |    0    |    6    |    41   |    5.8    |\n",
+      "| acl-production |   us-east-1    |   20  |   74   |  37400  |  37400  |  57438   |    0    |    22   |    52   |    1.7    |\n",
+      "|  acl-staging   |   us-west-2    |   4   |   20   |   5573  |   5573  |  47098   |    0    |    4    |    16   |    3.0    |\n",
+      "| acl-production | ap-southeast-2 |   6   |   8    |  43019  |  43019  |  45853   |    0    |    6    |    2    |     0     |\n",
+      "| acl-production | ap-northeast-1 |   4   |   5    |  31184  |  31184  |  33923   |    0    |    4    |    1    |     0     |\n",
+      "| acl-production |   af-south-1   |   4   |   8    |  20069  |  20069  |  25972   |    0    |    3    |    5    |     0     |\n",
+      "| acl-playground |   us-west-2    |   1   |   1    |   4752  |   4752  |   6895   |    0    |    1    |    0    |     0     |\n",
+      "| acl-production |   sa-east-1    |   6   |   28   |   3963  |   3963  |   6310   |    0    |    7    |    21   |    2.7    |\n",
+      "| acl-production |  ca-central-1  |   4   |   7    |   1551  |   1551  |   1918   |    0    |    4    |    3    |     0     |\n",
       "+----------------+----------------+-------+--------+---------+---------+----------+---------+---------+---------+-----------+\n"
      ]
     }
@@ -279,9 +224,11 @@
     "    return aggregated_stats\n",
     "\n",
     "\n",
+    "\n",
     "# Specify your cluster and service name\n",
     "cluster_name = 'EcsCluster1-main'\n",
     "service_name = 'projects-application-fargate-main'\n",
+    "#service_name = 'results-application-fargate-main'\n",
     "\n",
     "environments = [\n",
     "    ('acl-playground', 'us-west-2'),  # playground\n",
@@ -350,7 +297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -358,24 +305,24 @@
      "output_type": "stream",
      "text": [
       "Found 1 tasks running in acl-playground/us-west-2\n",
-      "Found 1 tasks running in acl-staging/us-west-2\n",
+      "Found 4 tasks running in acl-staging/us-west-2\n",
       "Found 3 tasks running in acl-staging/us-east-1\n",
-      "Found 30 tasks running in acl-production/us-east-1\n",
-      "Found 64 tasks running in acl-production/eu-central-1\n",
+      "Found 20 tasks running in acl-production/us-east-1\n",
+      "Found 29 tasks running in acl-production/eu-central-1\n",
       "Found 4 tasks running in acl-production/af-south-1\n",
       "Found 4 tasks running in acl-production/ca-central-1\n",
       "Found 4 tasks running in acl-production/ap-northeast-1\n",
-      "Found 4 tasks running in acl-production/ap-southeast-1\n",
+      "Found 6 tasks running in acl-production/ap-southeast-1\n",
       "Found 6 tasks running in acl-production/ap-southeast-2\n",
       "Found 6 tasks running in acl-production/sa-east-1\n",
       "+----------------+----------------+------+--------+-----------------+\n",
       "|    Profile     |     Region     | vCPU | Memory | Unicorn Workers |\n",
       "+----------------+----------------+------+--------+-----------------+\n",
-      "| acl-playground |   us-west-2    | 0.5  |  3 GB  |        4        |\n",
+      "| acl-playground |   us-west-2    | 0.5  |  3 GB  |        2        |\n",
       "|  acl-staging   |   us-west-2    | 0.5  |  3 GB  |        4        |\n",
-      "|  acl-staging   |   us-east-1    | 1.0  |  5 GB  |        2        |\n",
+      "|  acl-staging   |   us-east-1    | 1.0  |  5 GB  |        4        |\n",
       "| acl-production |   us-east-1    | 1.0  |  6 GB  |        2        |\n",
-      "| acl-production |  eu-central-1  | 2.0  |  9 GB  |        2        |\n",
+      "| acl-production |  eu-central-1  | 2.0  |  9 GB  |        4        |\n",
       "| acl-production |   af-south-1   | 0.5  |  4 GB  |        2        |\n",
       "| acl-production |  ca-central-1  | 0.5  |  4 GB  |        2        |\n",
       "| acl-production | ap-northeast-1 | 0.5  |  4 GB  |        2        |\n",
@@ -410,8 +357,6 @@
     "    unicorn_workers = next((env_var['value'] for env_var in environment_variables if env_var['name'] == 'UNICORN_WORKERS'), None)\n",
     "    \n",
     "    return vcpu, memory, unicorn_workers\n",
-    "\n",
-    "    \n",
     "\n",
     "    \n",
     "\n",
