--- a/app-analyzers/projects-params.ipynb
+++ b/app-analyzers/projects-params.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -163,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -173,13 +173,13 @@
       "acl-playground us-west-2 - Min Tasks: 1, Max Tasks: 4, Actual Tasks: 1 (25.0%), Algorithm: LOR\n",
       "acl-staging us-west-2 - Min Tasks: 1, Max Tasks: 4, Actual Tasks: 1 (25.0%), Algorithm: LOR\n",
       "acl-staging us-east-1 - Min Tasks: 3, Max Tasks: 3, Actual Tasks: 3 (N/A%), Algorithm: LOR\n",
-      "acl-production us-east-1 - Min Tasks: 6, Max Tasks: 48, Actual Tasks: 30 (62.5%), Algorithm: LOR\n",
-      "acl-production eu-central-1 - Min Tasks: 8, Max Tasks: 64, Actual Tasks: 64 (100.0%), Algorithm: LOR\n",
-      "acl-production af-south-1 - Min Tasks: 4, Max Tasks: 4, Actual Tasks: 4 (N/A%), Algorithm: LOR\n",
+      "acl-production us-east-1 - Min Tasks: 6, Max Tasks: 48, Actual Tasks: 21 (43.75%), Algorithm: LOR\n",
+      "acl-production eu-central-1 - Min Tasks: 12, Max Tasks: 50, Actual Tasks: 31 (62.0%), Algorithm: LOR\n",
+      "acl-production af-south-1 - Min Tasks: 4, Max Tasks: 32, Actual Tasks: 4 (12.5%), Algorithm: LOR\n",
       "acl-production ca-central-1 - Min Tasks: 4, Max Tasks: 32, Actual Tasks: 4 (12.5%), Algorithm: LOR\n",
-      "acl-production ap-northeast-1 - Min Tasks: 4, Max Tasks: 4, Actual Tasks: 4 (N/A%), Algorithm: LOR\n",
-      "acl-production ap-southeast-1 - Min Tasks: 4, Max Tasks: 4, Actual Tasks: 4 (N/A%), Algorithm: LOR\n",
-      "acl-production ap-southeast-2 - Min Tasks: 6, Max Tasks: 6, Actual Tasks: 6 (N/A%), Algorithm: LOR\n",
+      "acl-production ap-northeast-1 - Min Tasks: 4, Max Tasks: 32, Actual Tasks: 4 (12.5%), Algorithm: LOR\n",
+      "acl-production ap-southeast-1 - Min Tasks: 6, Max Tasks: 48, Actual Tasks: 6 (12.5%), Algorithm: LOR\n",
+      "acl-production ap-southeast-2 - Min Tasks: 6, Max Tasks: 48, Actual Tasks: 6 (12.5%), Algorithm: LOR\n",
       "acl-production sa-east-1 - Min Tasks: 6, Max Tasks: 48, Actual Tasks: 6 (12.5%), Algorithm: LOR\n",
       "+----------------+----------------+-----+-----+--------+-------+-----------+\n",
       "|    Profile     |     Region     | Min | Max | Actual |   %   | Algorithm |\n",
@@ -187,13 +187,13 @@
       "| acl-playground |   us-west-2    |  1  |  4  |   1    |  25.0 |    LOR    |\n",
       "|  acl-staging   |   us-west-2    |  1  |  4  |   1    |  25.0 |    LOR    |\n",
       "|  acl-staging   |   us-east-1    |  3  |  3  |   3    |  N/A  |    LOR    |\n",
-      "| acl-production |   us-east-1    |  6  |  48 |   30   |  62.5 |    LOR    |\n",
-      "| acl-production |  eu-central-1  |  8  |  64 |   64   | 100.0 |    LOR    |\n",
-      "| acl-production |   af-south-1   |  4  |  4  |   4    |  N/A  |    LOR    |\n",
+      "| acl-production |   us-east-1    |  6  |  48 |   21   | 43.75 |    LOR    |\n",
+      "| acl-production |  eu-central-1  |  12 |  50 |   31   |  62.0 |    LOR    |\n",
+      "| acl-production |   af-south-1   |  4  |  32 |   4    |  12.5 |    LOR    |\n",
       "| acl-production |  ca-central-1  |  4  |  32 |   4    |  12.5 |    LOR    |\n",
-      "| acl-production | ap-northeast-1 |  4  |  4  |   4    |  N/A  |    LOR    |\n",
-      "| acl-production | ap-southeast-1 |  4  |  4  |   4    |  N/A  |    LOR    |\n",
-      "| acl-production | ap-southeast-2 |  6  |  6  |   6    |  N/A  |    LOR    |\n",
+      "| acl-production | ap-northeast-1 |  4  |  32 |   4    |  12.5 |    LOR    |\n",
+      "| acl-production | ap-southeast-1 |  6  |  48 |   6    |  12.5 |    LOR    |\n",
+      "| acl-production | ap-southeast-2 |  6  |  48 |   6    |  12.5 |    LOR    |\n",
       "| acl-production |   sa-east-1    |  6  |  48 |   6    |  12.5 |    LOR    |\n",
       "+----------------+----------------+-----+-----+--------+-------+-----------+\n"
      ]
